add comments into script